5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1756_1583.log
== TEST (2019-05-26 17:46:03) 
-- CODE:
n = input("")

print(size(n))
cont = 0
while cont < size(n):
-- ERROR:
File "XXXX", line 6
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:46:21) 
-- CODE:
n = input("")

print(size(n))
cont = 0
#while cont < size(n):
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(size(n))
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:46:47) 
-- CODE:
n = input("")

print(n)
cont = 0
#while cont < size(n):
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:50:14) 
-- CODE:
n = input("")

cont = 0
while cont < len(n):
	tres = n[cont : cont + 2]
	saida = tres + "."
print(saida)
	
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:50:23) 
-- CODE:
n = input("")

cont = 0
while cont < len(n):
	tres = n[cont : cont + 2]
	saida = tres + "."
print(saida)
	
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:50:47) 
-- CODE:
n = input("")

cont = 0
while cont < len(n):
	tres = n[cont : cont + 2]
	saida = tres + "."
	cont = cont + 1
print(saida)
	
-- OUTPUT:
3.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:51:46) 
-- CODE:
n = input("")

cont = 0
saida = n[cont : cont + 2]
while cont < len(n):
	cont = cont + 3
	tres = n[cont : cont + 2]
	saida = "." + tres
print(saida)
	
-- OUTPUT:
.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:52:42) 
-- CODE:
n = input("")

cont = 0
saida = n[cont : cont + 2]
while cont < len(n):
	cont = cont + 3
	saida = saida + "."
print(saida)
	
-- OUTPUT:
12.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:52:50) 
-- CODE:
n = input("")

cont = 0
saida = n[cont : cont + 2]
while cont < len(n):
	cont = cont + 3
	saida = saida + "."
print(saida)
	
-- OUTPUT:
12.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:52:57) 
-- CODE:
n = input("")

cont = 0
saida = n[cont : cont + 2]
while cont < len(n)/3:
	cont = cont + 3
	saida = saida + "."
print(saida)
	
-- OUTPUT:
12.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:54:22) 
-- CODE:
n = input("")

cont = 0
while cont < len(n)/3:
	saida = n[cont : cont + 4]
	cont = cont + 3
	saida = saida + "."
print(saida)
	
-- OUTPUT:
123.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:55:29) 
-- CODE:
n = input("")

cont = 0
while cont < len(n)/3:
	saida = n[cont : cont + 4] + "."
	cont = cont + 3
print(saida)
	
-- OUTPUT:
123.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:55:53) 
-- CODE:
n = input("")

cont = 0
while cont < len(n):
	saida = n[cont : cont + 4] + "."
	cont = cont + 3
print(saida)
	
-- OUTPUT:
123.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:56:27) 
-- CODE:
n = input("")

cont = 0
while cont < len(n):
	saida = str(n[cont : cont + 4]) + "."
	cont = cont + 3
print(saida)
	
-- OUTPUT:
123.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:57:06) 
-- CODE:
n = input("")

cont = 0
saida = str(n[cont : cont + 4]) + "."
while cont < len(n):
	saida =  "." + str(n[cont : cont + 4])
	cont = cont + 3
print(saida)
	
-- OUTPUT:
.123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:57:26) 
-- CODE:
n = input("")

cont = 0
saida = str(n[cont : cont + 4]) + "."
while cont < len(n):
	saida = saida + "." + str(n[cont : cont + 4])
	cont = cont + 3
print(saida)
	
-- OUTPUT:
123..123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:57:46) 
-- CODE:
n = input("")

cont = 0
saida = str(n[cont : cont + 4])
while cont < len(n):
	saida = saida + "." + str(n[cont : cont + 4])
	cont = cont + 3
print(saida)
	
-- OUTPUT:
123.123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:58:00) 
-- CODE:
n = input("")

cont = 0
saida = str(n[cont : cont + 3])
while cont < len(n):
	saida = saida + "." + str(n[cont : cont + 3])
	cont = cont + 3
print(saida)
	
-- OUTPUT:
123.123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:59:18) 
-- CODE:
n = input("")

cont = 0
saida = ""
while cont < len(n):
	saida = str(n[cont : cont + 3]) +  "."
	cont = cont + 3
print(saida)
	
-- OUTPUT:
123.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 17:59:46) 
-- CODE:
n = input("")

cont = 0
saida = ""
while cont < len(n):
	saida = saida + "." + str(n[cont : cont + 3])
	cont = cont + 3
print(saida)
	
-- OUTPUT:
.123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 18:00:53) 
-- CODE:
n = input("")

cont = 0
saida = n[0:3]
while cont < len(n) - 3:
	cont = cont + 3
	saida = saida + "." + str(n[cont : cont + 3])

print(saida)
	
-- OUTPUT:
123
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 18:01:02) 
-- CODE:
n = input("")

cont = 0
saida = n[0:3]
while cont < len(n) - 3:
	cont = cont + 3
	saida = saida + "." + str(n[cont : cont + 3])

print(saida)
	
-- EXECUTION TIME:
0.14922
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
